--- a/static/partials/userPage.html
+++ b/static/partials/userPage.html
@@ -1,12 +1,13 @@
 <div id="userPage">
 	<div>
 		<nav class="homeNav">
-			<a class="webName1" href="#/home">
+			<a style="font-size: 35px; color: rgb(255, 153, 0)" href="#/home">
 				<div>FUTRENA</div>
-			</a> <a
-				style="color: rgb(255, 153, 0); text-decoration: none; float: right; font-size: 35px; margin-right: 30px">
+			</a> 
+			<div
+				style="color: rgb(255, 153, 0); font-size: 35px; position: absolute; right: 10px; top: 0px;">
 				<div><i class="fa fa-user"></i> {{currentUser}}</div>
-			</a>
+			</div>
 		</nav>
 		<div>
 			<div class="sidebarUser">
