--- a/static/css/app.css
+++ b/static/css/app.css
@@ -78,114 +78,7 @@
 .content:nth-child(4){
 	display:none;
 }
-#submit{
-	color:rgb(255,153,0);
-	text-decoration: none;
-	float:left;
-	margin-left:30px;
-}
 
-#submit div{
-	display:inline-block;
-	height:50px;
-	cursor: pointer;
-	padding-top: 12px;
-	padding-left:5px;
-	padding-right:5px;
-	border-radius:5px;
-}
-
-#submit :hover{
-	background-color: rgba(255,255,230,0.5);
-}
-
-.webName{
-	color:rgb(255,153,0);
-	text-decoration: none;
-	margin-left:-20%;
-	display:none;
-}
-
-.webName div{
-	display:inline-block;
-	height:50px;
-	cursor: pointer;
-	font-size:40px;
-	padding-left:5px;
-	padding-right:5px;
-	border-radius:10px;
-}
-
-.webName div:hover{
-	background-color: rgba(132,132,132,0.2);
-}
-
-.webName:visited{
-	color:rgba(255,153,0,0.4);
-}
-
-.webName1{
-	color:rgb(255,153,0);
-	text-decoration: none;
-}
-
-.webName1 div{
-	display:inline-block;
-	height:50px;
-	cursor: pointer;
-	font-size:40px;
-	padding-left:15px;
-	padding-right:15px;
-	border-radius:10px;
-}
-
-.webName1 :hover{
-	background-color: rgba(132,132,132,0.2);
-}
-
-.webName1:visited{
-	color:rgba(255,153,0,0.4);
-}
-
-/*#login{
-	color:rgb(255,255,230);
-	text-decoration: none;
-	float:right;
-	margin-right:30px;
-}
-
-#login div{
-	display:inline-block;
-	height:50px;
-	cursor: pointer;
-	padding-top: 12px;
-	padding-left:5px;
-	padding-right:5px;
-}
-
-#login :hover{
-	background-color: rgba(255,255,230,0.5);
-}
-
-#signUp{
-	color:rgb(255,255,230);
-	text-decoration: none;
-	float:right;
-	margin-right:20px;
-}
-
-#signUp div{
-	display:inline-block;
-	height:50px;
-	cursor: pointer;
-	padding-top: 12px;
-	padding-left:5px;
-	padding-right:5px;
-}
-
-#signUp :hover{
-	background-color: rgba(255,255,230,0.5);
-}*/
 
 #shoppingCart{
 	color:rgb(255,153,0);
@@ -250,11 +143,6 @@
 	top:0;
 }
 
-#timeSlide{
-	margin-top:10px;
-	height: 30px;
-}
-
 #home #titleSection{
 	padding-top: 1px;
 	padding-bottom: 20px;
@@ -272,16 +160,6 @@
 	z-index: -1;
 }
 
-
-#home .title{
-	width: 100%;
-	max-width:1500px;
-	text-align: center;
-	margin-top: 50px;
-	margin-bottom:50px;
-	font-size: 70px;
-	color:rgb(255,255,255);
-}
 
 #slogan{
 	font-size:20px;
@@ -302,85 +180,42 @@
 	padding-top:50px;
 }
 
-#home .viewNavigator {
-	font-size: 25px;
-	width: 100%;
-	height: 70px;
-	position: static;
-	background-color: white;
-	margin-top: 10px;
-}
-
-#home .viewNavigator .link {
-	text-decoration: none;
-	margin-left: 80px;
-	margin-right: 80px;
-	color:rgb(255,153,0);
-	padding-bottom: 27px;
-}
-
-#home .viewNavigator .selected {
-	border-bottom: solid 3px;
-	padding-bottom: 12px;
-	border-color:rgb(255,153,0);
-}
-
-.filter{
-	cursor: pointer;
-	color:rgb(255,153,0)
-}
-
-.filter:hover{
-	color:rgba(255,153,0,0.4)
-}
-
-#home .viewNavigator .unselected {
-	border-bottom: solid 0px;
-}
-
-#home .productNavigator {
-	height: 60px;
-	background-color: white;
+.link {	
 	color: white;
-	position: fixed-top;
-	text-align: center;
-	margin-left:25%;
-	width: 50%;
-	vertical-align: center;
-}
-
-#home .productNavigator .link{
-	color: black;
+	font-size: 20px;
 	text-decoration: none;
-	font-size: 12px;
-	margin-right:30px;
 }
 
-#home .productNavigator .selected{
-	border-bottom: solid 2px;
-	padding-bottom: 2px;
-	border-color: rgb(0,102,51);
+.link:visited{	
+	color: white;
+	text-decoration: none;
 }
 
-#home .productNavigator .link .subLink{
-	position: relative; 
-	top: 15px;
+
+.selected {
+	background-color: rgb(92,194,247);
+	text-decoration: none;
+	color: white;
+}
+.unselected {
+	background-color: rgb(31,31,31);
+	text-decoration: none;
+	color: white;
 }
 
-#home .productBoard {
-	width: 100%;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;
+#productBoard {
+	position: fixed;
+	background-color: #eee;
+	right: 0;
+	top: 0;
+	width: 75%;
+	height: 100vh;
+	overflow: auto;
 }
 
-#home .productBoard .block {
+.block {
 	float: left;
-	margin: 30px 20px;
-}
-
-#home .productBoard .mobileBlock {
-	margin: 10px auto;
+	margin: 18px 20px;
 }
 
 .userSignInUp {
@@ -417,5 +252,25 @@
 
 .disableScroll {
 	overflow: hidden;
+}
+
+.sideBar {
+	background-color: rgb(31,31,31);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 25%;
+	height: 100vh;
+	opacity: 0.95;
+}
+
+.logo {
+	margin-top: 20px;
+}
+
+.navBar {
+	margin: 0 auto;
+	width: 70%;
+	height: 60vh;
 }
 
