--- a/static/partials/productDisplayPanel.html
+++ b/static/partials/productDisplayPanel.html
@@ -71,8 +71,10 @@
 			<select></select><br><br>
 		
 			<a ng-click="addFavourate()" ng-show="inFavourates == false"><i class="fa fa-heart-o fa-2x"><i style="font-size: 15px">Wishlist</i></i></a>
-			<a ng-click="removeFavourate()" ng-show="inFavourates == true"><i class="fa fa-heart fa-2x"><i style="font-size: 15px">Wishlist</i></i></a> 
-			<a style="margin-left: 20px" data-toggle="popover"><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>
+			<a ng-click="removeFavourate()" ng-show="inFavourates == true"><i class="fa fa-heart fa-2x"><i style="font-size: 15px">Wishlist</i></i></a>
+
+			<share-url></share-url>
+			<!--<a style="margin-left: 20px" data-toggle="popover"><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>-->
 			<br><br><a><i class="fa fa-star"><i style="font-size: 10px">Learn Distribute to earn lifetime INCOME </i></i></a>
 
 			<br><button ng-click="addToCart()" class="btn btn-success" style="margin-left: 70%;width: 150px">Add to Cart</button>
